-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.9
-
Component/s: Time zones
-
Labels:
This used to work in 10.0 and 10.1:
set time_zone='Europe/Moscow'; |
create table t1 (a timestamp); |
set timestamp=1288481126; |
insert t1 values (null); |
select a, unix_timestamp(a) from t1; |
but in 10.2 it returns 1288477526 (one hour earlier).
Because both 1288481126 and 1288477526 are written as 2010-10-31 02:25:26 in time zone Europe/Moscow, and intermediate timestamp→datetime→timestamp conversion loses information.